<resources>
    <string name="app_name">XHomeRemote</string>
    <string name="please_wait">Please wait</string>
    <string name="outletcard_type">Type:</string>
    <string name="outletcard_outletId">Outlet ID:</string>
    <string name="outletcard_agentId">Agent ID:</string>
    <string name="outletcard_name">Name:</string>
    <string name="not_registered">Not Registered</string>
    <string name="register">Register</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Outlets</string>
    <string name="action_search">Søg</string>
    <string name="search_hint">Lys...</string>
    <string name="registerOutletTitle">Register Outlet</string>
    <string name="internalIP">Internal IP:</string>
    <string name="externalIP">External IP:</string>
    <string name="outletlist_onitemclick_message">Long Press the card to register the Outlet</string>
    <string name="login_connectionfailed">Socket connection failed, please reconnect by logging ind</string>
</resources>
