<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="140dp"
    android:layout_margin="12dp"
    android:background="@color/white"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/AppTheme"
        android:background="@color/white">

        <ImageView
            android:id="@+id/OutletViewAdapter_Outlet_ImageView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_lock_power_off" />


        <TextView
            android:id="@+id/OutletViewAdapter_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textColor="@color/black"
            android:text="Bobs Laptop"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/OutletViewAdapter_Outlet_ImageView" />

        <LinearLayout
            android:id="@+id/OutletViewAdapter_agentID_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/OutletViewAdapter_Name">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/outletcard_agentId"
                android:textColor="@color/darkGrey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/OutletViewAdapter_AgentID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/OutletViewAdapter_OutletID_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/OutletViewAdapter_agentID_ll">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/outletcard_outletId"
                android:textColor="@color/darkGrey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/OutletViewAdapter_OutletID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/OutletViewAdapter_type_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/OutletViewAdapter_OutletID_ll">


            <TextView
                android:id="@+id/OutletViewAdapter_type_head_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/outletcard_type"
                android:textColor="@color/darkGrey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/OutletViewAdapter_Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </LinearLayout>


        <Switch
            android:id="@+id/OutletViewAdapter_Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:theme="@style/XSwitch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/OutletViewAdapter_type_ll" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>